# cmd/server/docs/swagger.json
@@ -9,6 +9,26 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Проверка доступности сервиса",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Healthcheck",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/tasks": {
             "post": {
                 "description": "Инициализирует задачу со статусом Pending и возвращает её с сгенерированным ID",
